[bug] #5100 Increased toast z-index

--- a/src/core/style/variables.scss
+++ b/src/core/style/variables.scss
@@ -77,7 +77,7 @@ $z-index-tooltip: 100 !default;
 $z-index-menu: 99 !default;
 $z-index-select: 99 !default;
 $z-index-dialog: 80 !default;
-$z-index-toast: 90 !default;
+$z-index-toast: 101 !default;
 $z-index-bottom-sheet: 70 !default;
 $z-index-scroll-mask: 65 !default;
 $z-index-sidenav: 60 !default;
